manifests/paddock/base/deployment_config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    application: paddock
  name: paddock
spec:
  replicas: 1
  selector:
    deploymentConfig: paddock
  template:
    metadata:
      labels:
        application: paddock
        deploymentConfig: paddock
      name: paddock
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: b4mad-racing-pguser-paddock
                  key: uri
          image: paddock:latest
          imagePullPolicy: Always
          name: paddock
          command: ["/bin/sh", "-c"]
          args:
            - python /opt/app-root/src/manage.py collectstatic --noinput;
              uwsgi --http "0.0.0.0:8000" --module paddock.wsgi:application --master --processes 4 --threads 2 --static-map /static=/opt/app-root/src/static
          ports:
            - containerPort: 8000
              name: django-http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: b4mad-racing-pguser-paddock
                  key: uri
          image: paddock:latest
          imagePullPolicy: Always
          name: pitcrew
          command: ["/bin/sh", "-c"]
          args:
            - python /opt/app-root/src/manage.py pitcrew
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      serviceAccount: paddock
      serviceAccountName: paddock
