manifests/paddock/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: paddock
  name: paddock
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/timeout: 45s
spec:
  host: paddock.b4mad.racing
  tls:
    termination: edge
  to:
    name: paddock
